--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
       "homepage": "https://github.com/oleg-melnic"
     }
   ],
+  "minimum-stability": "dev",
   "require": {
     "php": ">=5.6.0",
     "guzzlehttp/guzzle": "~5.3.4",
