--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,9 @@
   ],
   "minimum-stability": "dev",
   "require": {
-    "php": ">=5.6.0",
-    "guzzlehttp/guzzle": "~5.3.4",
-    "guzzlehttp/guzzle-services": "~0.6.0",
-    "guzzlehttp/log-subscriber": "~1.0.0",
+    "php": "^5.6 || ^7.2",
+    "guzzlehttp/guzzle": "~6.5.5",
+    "guzzlehttp/guzzle-services": "~1.0.0",
     "monolog/monolog": "^1.21"
   },
   "autoload": {
